# fish-story2-opengl-game

./: .gitignore  .~lock.Project Proposal.docx#  CMakeLists.txt  INSTALL.md  Project Proposal.docx  QUICKSTART.md  README.md  build.bat  build.sh
GUC_312_67_58117_2025-11-11T18_27_27/: Project Proposal Template.docx
models/Fish hook/: Fish Hook.3ds
models/Fish_v1_L2.123ce045555c-e177-486e-8ce8-dad39381ed15/: 12265_Fish_v1_L2.3ds
models/Kingfish/: Mesh_Kingfish-animation3.mtl  Mesh_Kingfish.3ds
models/Treasure chest/: model-fine.mtl
shaders/: fragment.glsl  text.frag  vertex.glsl
src/: Anglerfish.cpp  Anglerfish.h  AudioEngine.cpp  AudioEngine.h  Camera.cpp  Camera.h  Cave.cpp  Cave.h  Collectible.cpp  Collectible.h  Crab.cpp  Crab.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameLevel2.cpp  GameLevel2.h  Model.cpp  Model.h  Ocean.cpp  Ocean.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Stalactite.cpp  Stalactite.h  TextRenderer.cpp  TextRenderer.h  TreasureChest.cpp  TreasureChest.h  main.cpp
